--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,9 +11,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: install
       run: |
-           sudo apt install -y libmodule-build-perl libtest-distribution-perl
+           sudo apt install -y libmodule-build-perl libtest-distribution-perl libyaml-syck-perl
            /usr/bin/perl Build.PL --installdirs vendor --config "optimize=-g -O2 -ffile-prefix-map=/PKGS/txt2html/txt2html=. -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2" --config "ld=x86_64-linux-gnu-gcc -g -O2 -ffile-prefix-map=/PKGS/txt2html/txt2html=. -fstack-protector-strong -Wformat -Werror=format-security -Wl,-z,relro"
            /usr/bin/perl Build
-           /usr/bin/perl Build install --create_packlist 0
+           sudo /usr/bin/perl Build install --create_packlist 0
 #    - name: run_program
 #      run: |
